<resources>
    <string name="app_name">WeatherApp</string>
    <string name="forecast_name">Forecast</string>
    <string name="city_name">St. Paul, Mn</string>
    <string name="current_temp">72°</string>
    <string name="feel_like_temp">Feels like 78°</string>
    <string name="low_temp">Low 65°</string>
    <string name="high_temp">High: 80°</string>
    <string name="humidity">Humidity 100%</string>
    <string name="pressure">Pressure 1023 hPa</string>
    <string name="forecast">Forecast</string>
    <string name="degree_symbol">%d°</string>
    <string name="feels_like" />
    <string name="sunrise" />
    <string name="sunset" />
    <string name="get_my_location">"Get Weather for My Location"</string>

</resources>