<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temp"
        android:textSize="72sp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name"
        />

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/sun"
        android:importantForAccessibility="no"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp"
        app:layout_constraintBottom_toBottomOf="@id/current_temp"/>

    <TextView
        android:id="@+id/feel_like_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feel_like_temp"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/current_temp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintEnd_toEndOf="@id/current_temp" />

    <TextView
        android:id="@+id/low_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_temp"
        android:textSize="18sp"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/current_temp" />


    <TextView
        android:id="@+id/high_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_temp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/low_temp" />


    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/high_temp" />


    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/humidity" />

</androidx.constraintlayout.widget.ConstraintLayout>